[package]
name = "pysqlx-core"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "/pyproject.toml",
  "/LICENSE",
  "/README.md",
  "/convert",
  "/database",
  "/py_types",
  "/pysqlx_core.pyi",
  "/src",
]

[lib]
name = "pysqlx_core"
crate-type = ["cdylib", "rlib"]


[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]
vendored-openssl = ["quaint/vendored-openssl"]


[workspace]
members = ["quaint"]


[package.metadata.maturin]
python-source = "pysqlx_core"
bindings = "pyo3"


[dependencies]
pyo3 = { version = "0.22", features = [
  "extension-module",
  "chrono",
  "serde",
  "experimental-async",
  "auto-initialize",
] }
pyo3-log = "0.11"
tokio = "1.29"
env_logger = "0.11"
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
base64 = { version = "0.12.3" }
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
bigdecimal = "0.3"

quaint.workspace = true

[dev-dependencies]
libc = "0.2.0"
tokio = { version = "1.29", features = ["macros"] }

[build-dependencies]
pyo3-build-config ="0.22"


[workspace.dependencies.quaint]
path = "quaint"
features = [
  "expose-drivers",
  "fmt-sql",
  "mssql",
  "mysql",
  #"pooled",
  "postgresql",
  "sqlite",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
# panic = "abort"

debug = false
debug-assertions = false
overflow-checks = false
rpath = false


[profile.dev]
opt-level = 0
incremental = true
lto = false
debug = true
overflow-checks = false
codegen-units = 256
rpath = false
