[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pysqlx-core"
requires-python = ">=3.7"
authors = [{name = 'Carlos Rian', email = 'crian.rian@gmail.com'}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: IPython",
]

dependencies = ['typing_extensions; python_version < "3.11.0"']
dynamic = ["version", "license", "readme", "description"]
keywords = ["async", "database", "sql", "faster", "pysqlx"]

description = "A fast and async SQL database wrapper for Python, with support for MySQL, PostgreSQL, SQLite and MS SQL Server."

[project.urls]
Homepage = "https://github.com/carlos-rian/pysqlx-core"
Source = "https://github.com/carlos-rian/pysqlx-core"


[tool.maturin]
bindings = "pyo3"


[tool.black]
color = true
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true


[tool.poetry]
name = "pysqlx-engine"
version = "0.1.6"
description = "Python Async SQL Engines"
authors = ["Carlos Rian <crian.rian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
isort = {version = "^5.10.1", extras = ["colors"]}
black = "^22.10.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
psycopg2-binary = "^2.9.4"
asyncpg = "^0.26.0"
maturin = "^0.13.6"
httpx = "^0.23.0"
toml = "^0.10.2"
