[build-system]
requires = [
    'maturin>=1,<2',
    # 'typing-extensions >=4.6.0,!=4.7.0'
]
build-backend = 'maturin'

[project]
name = "pysqlx-core"
requires-python = ">=3.8"
authors = [{ name = 'Carlos Rian', email = 'crian.rian@gmail.com' }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Programming Language :: Rust',
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: IPython",
]

# dependencies = ['typing_extensions; python_version < "3.8.0"']
dynamic = ["version", "license", "readme", "description"]
keywords = ["async", "database", "sql", "faster", "pysqlx"]

description = "A fast and async SQL database wrapper for Python, with support for MySQL, PostgreSQL, SQLite and MS SQL Server."

[project.urls]
Homepage = "https://github.com/carlos-rian/pysqlx-core"
Source = "https://github.com/carlos-rian/pysqlx-core"


[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]


[tool.black]
color = true
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true


[tool.poetry]
name = "pysqlx-core"
version = "0.2.0"
description = "Python Async SQL Engines"
authors = ["Carlos Rian <crian.rian@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
maturin = { version = "^1.7.0", extras = ["patchelf"] }
isort = { version = "^5.10.1", extras = ["colors"] }
black = [
    { version = "^22.10.0", markers = "python_version < '3.8.0'" },
    { version = "^24.4.2", markers = "python_version >= '3.8.0'" },
]
httpx = [
    { version = "^0.23.0", markers = "python_version < '3.8.0'" },
    { version = "^0.27.0", markers = "python_version >= '3.8.0'" },
]
toml = "^0.10.2"
taskipy = "^1.13.0"
patchelf = "^0.17.2.1"
trio = "^0.26.0"
uvloop = "^0.20.0"

[tool.taskipy.tasks]
test = "cargo test -p pysqlx-core"
dev = "maturin develop"
build = "maturin build"
