[package]
name = "convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
py_types = { path = "../py_types"}
quaint.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
