[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3" }
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }

py_types = { path = "../py_types"}
convert = { path = "../convert"}
quaint.workspace = true

[features]
vendored-openssl = ["quaint/vendored-openssl"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
