[package]
name = "py_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "chrono", "serde", "auto-initialize"] }
chrono = { version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
quaint.workspace = true
uuid = { version = "1.3", features = ["serde", "v4"] }
serde_json = "1.0"
log = "0.4"
base64 = { version = "0.12.3" }

[dev-dependencies]
bigdecimal = "0.3"
