[package]
name = "py_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.22", features = [
    "extension-module",
    "chrono",
    "serde",
    "experimental-async",
] }
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
serde_json = "1.0"
log = "0.4"
base64 = { version = "0.12.3" }
rand = "0.8"
pyo3-log = "0.11"

quaint.workspace = true

[dev-dependencies]
bigdecimal = "0.3"
libc = "0.2.0"


[dev-dependencies.pyo3]
version = "*"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
auto-initialize = ["pyo3/auto-initialize"]

[tool.maturin]
cargo-extra-args = ["--features", "pyo3/extension-module"]
